# KSOM

./: .gitignore  README.md  ksom.py  pyproject.toml  requirements.txt  test_cheese.py  test_img.py  test_nb_fct.py
src/ksom/: ksom.py
tests/: comp.py  comp_on_img.py  comp_results.csv  comp_results_ksom_cpu.csv  comp_results_minisom.csv  config.json  plot_comp.py  test_cheese.py  test_img.py  test_mcw_cars.py  test_w__cars.py  test_w_cars.py  test_w_cheese.py
