[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ksom"
version = "0.10.0"
authors = [
  { name="Mathieu d'Aquin", email="mathieu.daquin.w+ksom@gmail.com" },
]
description = "Self Organising Maps in pytorch"
dependencies = [
    "torch>=2.0",
    "torchmetrics>=0.11",
    "numpy>=1.21",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mdaquin/ksom"
Issues = "https://github.com/mdaquin/ksom/issues"